fix(push-publishing): defensively copy endpointDetails on failure events (#34356)
Collections.unmodifiableList only wraps the caller's list with a read-only view —
mutations to the original list remain visible through the view. Switch to
List.copyOf so each failure event holds a true immutable snapshot of its
endpointDetails payload at construction time.

Also adds a regression test that mutates the source list after construction and
asserts the event's view stays unchanged.

Refs: #34356

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>